src/np222kk/dv507/a2/test/cases/negative/test_if_02.ofp
void main() {
    float f = 1.0;
    if (f) {
        print("Test");
    }
}